static_library("test_posix") {

    sources = [
        "mqueue/It_posix_queue.c",
        "mutex/It_posix_mutex.c",
        "sem/It_posix_sem.c",
        "pthread/It_posix_pthread.c",
        "swtmr/It_posix_swtmr.c",
        "sched/It_posix_sched.c",
        "mem/It_posix_mem.c",
        "smp/It_posix_smp_001.c",
        "smp/It_posix_smp_002.c",
        "smp/It_posix_smp_003.c",
        "smp/It_posix_smp_004.c",
        "smp/It_posix_smp_005.c",
        "smp/It_posix_smp_006.c",
        "smp/It_posix_smp_007.c",
        "smp/It_posix_smp_008.c",
        "smp/It_posix_smp_009.c",
        "smp/It_posix_smp_010.c",
        "smp/It_posix_smp_011.c",
        "smp/It_posix_smp_012.c",
        "smp/It_posix_smp_013.c",
        "smp/It_posix_smp_014.c",
        "smp/It_posix_smp_015.c",
        "smp/It_posix_smp_016.c",
        "smp/It_posix_smp_017.c",
        "smp/It_posix_smp_018.c",
        "smp/It_posix_smp.c",
    ]

    if (LOSCFG_TEST_SMOKE) {
        sources += [
            "mqueue/smoke/It_posix_queue_001.c",
            "mqueue/smoke/It_posix_queue_003.c",
            "mqueue/smoke/It_posix_queue_028.c",
            "mqueue/smoke/It_posix_queue_062.c",
            "mutex/smoke/It_posix_mutex_001.c",
            "mutex/smoke/It_posix_mutex_007.c",
            "mutex/smoke/It_posix_mutex_012.c",
            "mutex/smoke/It_posix_mutex_015.c",
            "mutex/smoke/It_posix_mutex_016.c",
            "mutex/smoke/It_posix_mutex_019.c",
            "mutex/smoke/It_posix_mutex_020.c",
            "sem/smoke/It_posix_sem_001.c",
            "sem/smoke/It_posix_sem_002.c",
            "pthread/smoke/It_posix_pthread_003.c",
            "pthread/smoke/It_posix_pthread_004.c",
            "pthread/smoke/It_posix_pthread_005.c",
            "pthread/smoke/It_posix_pthread_006.c",
            "pthread/smoke/It_posix_pthread_009.c",
            "pthread/smoke/It_posix_pthread_018.c",
            "pthread/smoke/It_posix_pthread_019.c",
            "pthread/smoke/It_posix_pthread_020.c",
            "pthread/smoke/It_posix_pthread_021.c",
            "pthread/smoke/It_posix_pthread_022.c",
            "swtmr/smoke/It_posix_swtmr_001.c",
            "swtmr/smoke/It_posix_swtmr_013.c",
            "swtmr/smoke/It_posix_swtmr_046.c",
            "swtmr/smoke/It_posix_swtmr_047.c",
            "swtmr/smoke/It_posix_swtmr_049.c",
            "swtmr/smoke/It_posix_swtmr_055.c",
            "swtmr/smoke/It_posix_swtmr_065.c",
            "swtmr/smoke/It_posix_swtmr_067.c",
            "swtmr/smoke/It_posix_swtmr_101.c",
            "swtmr/smoke/It_posix_swtmr_103.c",
            "swtmr/smoke/It_posix_swtmr_105.c",
            "swtmr/smoke/It_posix_swtmr_106.c",
            "mem/smoke/It_posix_mem_001.c",
            "mem/smoke/It_posix_mem_002.c",
            "mem/smoke/It_posix_mem_003.c",
        ]
    }

    include_dirs = [
        "../../../compat/posix/src",
        "../../include",
        "mem",
        "mqueue",
        "mutex",
        "pthread",
        "sched",
        "sem",
        "smp",
        "swtmr",
    ]

    cflags = [ "-Wno-error" ]
}
