# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_a/testsuites/unittest/config.gni")

signal_include_dirs = [ "$TEST_UNITTEST_DIR/extended/signal" ]

signal_sources_entry = [ "$TEST_UNITTEST_DIR/extended/signal/signal_test.cpp" ]

signal_sources_smoke = [
  "$TEST_UNITTEST_DIR/extended/signal/smoke/It_ipc_fdisset_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/It_ipc_mkfifo_002.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/It_ipc_mkfifo_003.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/It_ipc_pipe_004.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/It_ipc_pipe_005.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/mkfifo_test_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/mkfifo_test_002.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/pipe_test_002.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/pipe_test_004.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_002.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_009.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_013.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_014.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_021.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_022.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_023.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_024.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_031.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_032.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_035.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_036.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_037.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_039.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/signal_test_042.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/sigset_test_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/smoke/sigset_test_002.cpp",
]

signal_sources_full = [
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_fdclr_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_fdset_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_fdzero_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_sigaction_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_sigpause_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_sigprocmask_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_003.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_004.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_005.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_006.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_007.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_008.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_010.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_011.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_012.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_015.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_016.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_017.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_018.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_019.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_020.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_025.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_026.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_028.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_029.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_030.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_033.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_038.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_040.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/signal_test_041.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_pipe_002.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/It_ipc_pipe_003.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/pipe_test_001.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/pipe_test_003.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/pipe_test_005.cpp",
  "$TEST_UNITTEST_DIR/extended/signal/full/pipe_test_006.cpp",
]
